tdf#121111 ww8export: fillstyle_NONE needs a nil background

Without this, there is no way to cancel out an inherited
background color.

tdf#116071's unit test depends on this
fix in order to round-trip.

Change-Id: I99ad28ee87a6bea040e0ef3c712c1c911be70004